# EpyG

./: .editorconfig  .flake8  .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: codeql-analysis.yml  python-package.yml  python-publish.yml
EpyG/: Applications.py  EpyG.py  Operators.py
EpyG/examples/: Misc.ipynb  Untitled0.ipynb  Usage.ipynb
epyg/: Applications.py  EpyG.py  Operators.py  applications.py  epyg.py  operators.py
examples/: Usage.ipynb
tests/: test_operators.py  test_sequences.py  test_state.py
