[tool.poetry]
name = "epyg"
version = "0.1.0"
description = "Python implementation of the Extended Phase Graph algorithm for simulation of MRI signals"
authors = ["Daniel Brenner"]


[tool.poetry.dependencies]
python = ">=3.8,<4.0"
numpy = "^1.23.0"
matplotlib = {version = "^3.5.2", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.3.0"
flake8 = "^4.0.1"
hypothesis = "^6.48.2"
pytest-cov = "^3.0.0"

[tool.poetry.extras]
matplotliv = ["matplotlib"]

[[tool.mypy.overrides]]
plugins = "numpy.typing.mypy_plugin"

[tool.isort]
profile = "hug"
src_paths = ["isort", "test"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
