[tool.poetry]
name = "epyg"
version = "0.2.0"
description = "Python implementation of the Extended Phase Graph algorithm for simulation of MRI signals"
authors = ["Daniel Brenner"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/brennerd11/EpyG"
keywords = ["MRI", "simulation"]
classifiers = ["Development Status :: 4 - Beta",
               "Intended Audience :: Science/Research",
               "License :: OSI Approved :: MIT License"
               ]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
numpy = "^1.23.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.3.0"
flake8 = "^4.0.1"
flake8-bugbear = "^22.7.1"
hypothesis = "^6.52.1"
pytest-coverage = "^0.0"


[[tool.mypy.overrides]]
plugins = "numpy.typing.mypy_plugin"

[tool.isort]
profile = "hug"
src_paths = ["isort", "test"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
